<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuPrincipal" >

    <TextView
        android:id="@+id/txtvBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:text="@string/lblBienvenido"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnIngresar"
        android:layout_alignBottom="@+id/btnIngresar"
        android:layout_alignRight="@+id/txtvBienvenido"
        android:text="@string/lblSalir" />

    <TextView
        android:id="@+id/txtvAdvertenciaInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnIngresar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="23dp"
        android:text="@string/lblAdvertenciaInternet" />

    <Button
        android:id="@+id/btnAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/txtvBienvenido"
        android:text="@string/lblAcercaDe" />

    <EditText
        android:id="@+id/txtbUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnIngresar"
        android:layout_alignRight="@+id/btnSalir"
        android:layout_centerVertical="true"
        android:ems="10"
        android:text="@string/lblUrl" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtvAdvertenciaInternet"
        android:layout_alignLeft="@+id/txtvBienvenido"
        android:layout_marginBottom="20dp"
        android:text="@string/lblIngresar" />

    <ToggleButton
        android:id="@+id/btnModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtbUrl"
        android:layout_below="@+id/txtbUrl"
        android:text="@string/lblModificar"
        android:textOff="Modificar URL"
        android:textOn="Bloquear URL" />

</RelativeLayout>
